CustomExceptionHandler 추가, 공통, 주식 서비스 리펙토링, 상수 enum 추가